--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,11 @@
 <body>
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
-
+<a href="/sale_order/all">Sale Orders - View All</a> <br />
 <a href="/vehicle/all">Vehicles - View All</a> <br />
-<a href="/dealership/all">Dealerships - View All</a> <br />
 <a href="/manufacturer/all">Manufacturers - View All</a> <br />
-<a href="/customer/all">Customers - View All</a> <br />
+<a href="/customer/all">Customers - View All</a> <br /><br />
+<a href="/about">About this Site</a> <br />
 
 <br />
 
