--- a/views/customer/customerViewById.ejs
+++ b/views/customer/customerViewById.ejs
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Customer - <%= result[0].customer_id %></title>
 </head>
 <body>
