--- a/views/sale_order/sale_orderViewById.ejs
+++ b/views/sale_order/sale_orderViewById.ejs
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Sale Order - <%= result[0].order_id %></title>
 </head>
 <body>
