--- a/views/manufacturer/manufacturerAdd.ejs
+++ b/views/manufacturer/manufacturerAdd.ejs
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Add New Manufacturer</title>
 </head>
 <body>
