--- a/views/manufacturer/manufacturerViewById.ejs
+++ b/views/manufacturer/manufacturerViewById.ejs
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Manufacturer - <%= result[0].manufacturer_id %></title>
 </head>
 <body>
